# Mobile

./: .env.example  README.md  config.browserstack.env  config.py  config.real.env  pyproject.toml
tests/: conftest.py
utils/: app_locators.py  attach.py
